--- a/index.html
+++ b/index.html
@@ -8,23 +8,22 @@
 </head>
 <body>
 	<body>
+        <div class="modal_window_marker_coment" style="display: none;"> 
+                        <div  style="width: 15%; display: flex; flex-direction: column; position: absolute; z-index: 200; margin-top: 100px; margin-left: 100px;">
+                            <div>Введите комментарий к отметке</div>
+                            <textarea class="value_for_comment" name="" id="" cols="30" rows="10"></textarea>
+                            <select class="value_for_activity">
+                                <option value="clear">Чисто</option>
+                                <option value="active">Актив</option>
+                            </select>
+                            <button class="close_markers">Отмена</button><button class="create_new_marker">Поставить маркер</button>
+                        </div>
+                    </div>
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div style="display: flex;">
                     <div id="map" style="width: 100%; height: 600px"></div>  
-                    <div class="modal_window_marker_coment" style="display: none;"> 
-                        <div  style="width: 100%; display: flex; flex-direction: column ">
-                            <div>Введите комментарий к отметке</div>
-                            <textarea class="value_for_comment" name="" id="" cols="30" rows="10"></textarea>
-                            <select class="value_for_activity">
-                                <option value="./assets/img/dps.png">Пассив</option>
-                                <option value="./assets/img/ucrainec.png">Актив</option>
-                                <option value="./assets/img/valer2.png">Гиперактив стопят всех</option>
-                            </select>
-                            <button class="close_markers">Отмена</button><button class="create_new_marker">Поставить маркер</button>
-                        </div>
-                    </div>
                     </div>   
                 </div>
             </div>
